# mnn_mtcnn_cpp

./: README.md
android/app/: CMakeLists.txt  build.gradle
android/app/OpenCV-android-sdk/samples/: build.gradle
android/app/OpenCV-android-sdk/samples/face-detection/: build.gradle
android/app/OpenCV-android-sdk/samples/tutorial-2-mixedprocessing/: build.gradle
android/app/includes/: Bbox.h  imgProcess.h  mtcnn.h  net.h
android/app/src/main/cpp/: Bbox.cpp  imgProcess.cpp  mtcnn.cpp  native-lib.cpp  net.cpp
android/app/src/main/java/opencv4unity/camera1gltest1/: MainActivity.java  MyGLSurfaceView.java  MyNDKOpencv.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
models/: det1.mnn  det2.mnn  det3.mnn
